# nat_framework

./: .dir-locals.el  .gitignore  .gitmodules  BUILD.md  BUILD.org  BUILD.tex  Notes.org  TODOs.org
src/: CMakeLists.txt  makefile  makefile.bak
src/ThirdPart/: ThirdPartTool.md
src/TradeTool/: CCtpMiniTrader.cpp  CCtpTrader.cpp  CCtpTrader.h  CEESTrader.cpp  CGlobalParameter.cpp  CTraderBase.h  CTraderFactory.cpp  TradeTool.cpp  TraderLogger.h  makefile.bak
src/TunnelAgent/: CCommanderBase.cpp  CExecLoader.cpp  CExecLoader.h  CLibLoader.h  CPythonExecutor.h  CSaveFileCmd.h  CShellCmd.cpp  CShellCmd.h  CStrategyManager.cpp  CWaiter.cpp  CWaiter.h  StgManager.cpp  agenttest.cnf  client_tmp.cnf  makefile  makefile.bak  private_key.h  protocol.h  public_key.h  sotest.cpp  st.cnf  test.py
src/account/: AccBase.cpp  AccBase.h  CMakeLists.txt  ModAcc.cpp  ModAcc.h  ModInstr.cpp  ModInstr.h  ModPrd.cpp  ModPrd.h  UnitAmt.cpp  UnitAmt.h  UnitPnl.cpp  UnitPnl.h  UnitPx.cpp  UnitPx.h  UnitVol.cpp  UnitVol.h
src/bar/: Bar2.cpp  Bar2.h  BarHelper.cpp  BarHelper.h  BarMaker.cpp  BarMaker.h  CMakeLists.txt
src/cmake/: NatFrameworkConfig.cmake.in
src/common/: ATSysUtils.cpp  ATSysUtils.h  CEncodeConv.cpp  CGlobalLock.cpp  CMakeLists.txt  CPipExecutor.cpp  CPipExecutor.h  CTimer.cpp  CTradeBaseInfo.cpp  CTradeBaseInfo.h  CWareHouseReader.cpp  CWareHouseReader.h  compiler.h  json.hpp  utils.cpp
src/config/: CConfig.h  CMakeLists.txt  makefile  makefile.bak  test.cnf  test.cpp
src/crypt/: CCrypt.cpp  CCrypt.h  CMakeLists.txt  makefile  makefile.bak  prikey.pem  pubkey.pem  test.cpp
src/doc/: Logger.org  account_and_risk.org  ctp.org  frq.org  io.org  logger.org  main.org  python.org  simulation_market.org  strategy.org  timer.org  tunnel_agent.org
src/dump/: CCTPMD.cpp  CCTPMD.h  CCTPTD.cpp  CCTPTD.h  CMakeLists.txt  CTPDumper.cpp  DailyInfoMgr.cpp  DailyInfoMgr.h  FileMgr.cpp  FileMgr.h  Structure.h  dump.json  dumplogger.cnf  makefile  makefile.bak  note.org
src/execute_model/: CABM.cpp  CAvgSpread.cpp  CAvgSpread.h  CBaseSignal.cpp  CBaseSignal.h  CDriftModel.cpp  CDriftModel.h  CExecuteStrategy.cpp  CExecuteStrategy.h  CLiquidityModel.cpp  CLiquidityModel.h  CLogitPModel.cpp  CLogitPModel.h  CLossModel.cpp  CLossModel.h  CMakeLists.txt  CMarketStruct.cpp  CMarketStruct.h  CSigmaSignal.cpp  CVolatilityModel.cpp  CVolatilityModel.h  PublicFun.h  PyExecStgExtension.cpp  getDeltaMd.cpp  makefile  makefile.bak  note.org
src/include/: ATConstants.h  ATStructure.h  CMakeLists.txt  Constant.h  IOCommon.h  Instrument.h  OldUnitedMarketData.h  SysConf.h  SysConf.h.in  VersionConfig.h.in  strategy_shared_comm.h
src/io/: CGlobalSafeRawIOWriter.cpp  CGlobalSafeRawIOWriter.h  CIOBase.cpp  CIOBase.h  CLocalQueue.cpp  CLocalQueue.h  CMakeLists.txt  CMemConfigBase.h  CMemIPCPy.cpp  CMemQueue.cpp  CMemQueue.h  CMemoryQueueBase.cpp  CMemoryQueueBase.h  CQueueBase.h  CRawIOModify.cpp  CRawIOModify.h  CRawIOReader.cpp  CRawIOReader.h  CRawIOWriter.cpp  CRawIOWriter.h  CReaderPool.cpp  CReaderPool.h  CReplayMemQueue.h  CSignal.cpp  CSignal.h  CSystemIO.cpp  CSystemIO.h  IOMonitor.cpp  IOTools.cpp  OTMonitor.cpp  ioprotocol.h  makefile  makefile.bak  nat_libio_class_diagram.graphml  note.org  queuetool.cpp  testsig.py
src/logdb/: CLogDB.cpp  CLogDB.h  CLogTable.cpp  CLogTable.h  CPyLogDB.cpp  CPyLogDB.h  CPyLogTable.cpp  CPyLogTable.h  makefile  makefile.bak  test.cpp  testpython.cpp
src/logger/: CFastLog.cpp  CFastLog.h  CLogPool.cpp  CLogPool.h  CLogger.cpp  CLogger.h  CMakeLists.txt  FastLogger.cpp  FastLogger.h  HeavyLogger.cpp  HeavyLogger.h  Log.h  LogConst.h  Logger.h  SimpleLogger.h  makefile  makefile.bak  test.cpp  testlog.cfg
src/make/: head.mk  make.inc  tail.inc  tail.mk
src/md/: CEESOnload.cpp  CEESOnload.h  CMDEngineCtp.cpp  CMDEngineCtp.h  CMDEngineEES.cpp  CMDEngineEES.h  CMDEngineEESOnload.cpp  CMDEngineEESOnload.h  CMDHelperComm.cpp  CMDHelperComm.h  CMDHelperFactory.cpp  CMDHelperFactory.h  CMDHelperPipe.cpp  CMDHelperPipe.h  CMDHelperPython.cpp  CMDHelperPython.h  CMDHelperReplayCtpDump.cpp  CMDHelperReplayCtpDump.h  CMDHelperReplayIO.cpp  CMDHelperReplayIO.h  CMakeLists.txt  IMDEngine.cpp  IMDEngine.h  IMDHelper.cpp  IMDHelper.h  MDEngine.cpp  makefile  makefile.bak  note.org
src/pyext/: CMakeLists.txt  PyExtExch.cpp  PyExtExch.h  PyExtension.cpp  PyUtils.cpp  PyUtils.h  PyWrapper.cpp  PyWrapper.h  note.org
src/risk/: CMakeLists.txt  ConfUtil.cpp  ConfUtil.h  RiskAcc.cpp  RiskAcc.h  RiskError.h  RiskInstr.cpp  RiskInstr.h  RiskInstrStg.cpp  RiskInstrStg.h  RiskInstrTop.cpp  RiskInstrTop.h  RiskPrd.cpp  RiskPrd.h  RiskStg.cpp  RiskStg.h  RiskTop.cpp  RiskTop.h  makefile.bak
src/scripts/: CMakeLists.txt  alert_check_alive.sh  alert_check_alive.sh.in  alert_listener.py.in  cmd_server.py  config.sh.in  deploy.sh.in  dump_svr.sh  dump_svr.sh.in  engine_svr.sh  engine_svr.sh.in  install_template.sh  make_installer.sh  tools.sh  tools.sh.in
src/server_utils/: CBuffer.cpp  CBuffer.h  CListener.cpp  CListener.h  CMakeLists.txt  CService.cpp  CService.h  CSocket.cpp  CSocket.h
src/signal_agent/: CMakeLists.txt  CSignalAgent.cpp  CSignalAgent.h  CSignalRequester.cpp  CSignalRequester.h  CSignalServer.cpp  CSignalServer.h  SignalAgent.json  SignalAgentProtocol.h  main.cpp  makefile  makefile.bak  s1.json  s2.json
src/strategy/: CMakeLists.txt  CStrategy.cpp  CStrategy.h  CStrategyProcess.cpp  CStrategyProcess.h  StrategyShared.cpp  StrategyShared.h  makefile  makefile.bak  note.org
src/td/: CMakeLists.txt  COrderTrackMmap.cpp  COrderTrackMmap.h  CTDEngineCtp.cpp  CTDEngineCtp.h  CTDEngineEES.cpp  CTDEngineEESV2.cpp  CTDEngineEESV2.h  CTDEngineXt.cpp  CTDEngineXt.h  CTDHelperComm.cpp  CTDHelperComm.h  CTDHelperFactory.cpp  CTDHelperFactory.h  CTDHelperFake.cpp  CTDHelperFake.h  CTDHelperPipe.cpp  CTDHelperPipe.h  CTDHelperPython.cpp  CTDHelperPython.h  ITDEngine.cpp  ITDEngine.h  ITDHelper.cpp  ITDHelper.h  TDEngine.cpp  TDEngineEESV2.cpp  TDEngineXt.cpp  makefile  makefile.bak  note.org  tdengine_offhour.json  test.cpp
src/tdlib/: CABM.cpp  CABM.h  CLossModel.h  (+21 more)
(+153 files in other folders)
